--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+.error {
+    width: 100%;
+    height: 100vh;
+    padding: 0 162px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input3 {
+    border: 2px solid white;
+    border-radius: 0px 15px 0px 15px;
+    padding: 17px 40px;
+    transition: .8s;
+    color: white;
+    font-size: 18px;
+    margin-top: 30px;
+    display: inline-block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input3:hover {
+    border-radius: 0;
+    background-color: #00FFB2;
+    color: black;
+    border: none;
+    cursor: pointer;
+    font-weight: 600;
 }
