--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.cursor1 {
+  position: fixed;
+  width: 26px;
+  height: 26px;
+  border: .5px solid #00FFB2;
+  border-radius: 50%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: .1s;
+  z-index: 10000;
 }
+
+.cursor2 {
+  z-index: 10000;
+  position: fixed;
+  width: 8px;
+  height: 8px;
+  background-color: #00FFB2;
+  border-radius: 50%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  transition: .15s;
+  transform: translate(-50%, -50%);
+}
+
+
+
